# ruddit

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs
src/actions/: add_api_keys.rs  mod.rs
src/ai/: gemini.rs
src/arguments/: mod.rs  modeling.rs
src/database/: adding.rs  clear.rs  mod.rs
src/exports/: csv.rs  excel.rs
src/settings/: api_keys.rs
